[CDS] Fix bugs after removing EagerAppCDS temporary jar files
Summary: There some bugs when test on buy2.The 1st is cannot read correct mainfest which lead to application cannot startup normally,the 2nd is cannot process signed jar correct.

Test Plan: All quickstart related testcases.

Reviewers: lei.yul,yunyao.zxl